nodejs-template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  labels:
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/instance: nodejs
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nodejs
    app.kubernetes.io/instance: nodejs
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
